--- a/front-end/public/view/index.html
+++ b/front-end/public/view/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/front-end/public/css/style.css">
     <title>Movies</title>
 </head>
 <body>
@@ -21,6 +21,6 @@
     
     <p id="message-1"></p>
 
-    <script src="script.js"></script>
+    <script src="/front-end/public/js/script.js"></script>
 </body>
 </html>
