--- a/front-end/public/view/index.html
+++ b/front-end/public/view/index.html
@@ -14,7 +14,7 @@
         </p>
 
         <form>
-            <input placeholder="Location">
+            <input placeholder="Movie title">
             <button>Search</button>
         </form>
     </div>
